--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "audiobuffer-to-blob": "^1.0.2",
     "axios": "^1.4.0",
     "blob": "^0.1.0",
     "buffer": "^6.0.3",
+    "easy-speech": "^2.1.1",
     "fs": "^0.0.1-security",
+    "gapi-script": "^1.2.0",
     "gh-pages": "^5.0.0",
+    "google-auth-library": "^9.0.0",
+    "google-oauth-gsi": "^2.0.0",
     "googleapis": "^126.0.1",
     "http": "^0.0.1-security",
     "mespeak": "^2.0.2",
     "octokit-commit-multiple-files": "^4.3.0",
+    "open": "^9.1.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "speech-synthesis-recorder": "^1.2.1",
     "stream": "^0.0.2",
