--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
+    "react-cookie": "^6.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
