--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "audiobuffer-to-blob": "^1.0.2",
     "axios": "^1.4.0",
     "blob": "^0.1.0",
+    "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
     "easy-speech": "^2.1.1",
     "formik": "^2.4.5",
@@ -40,6 +41,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-contenteditable": "^3.3.7",
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
