--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "blob": "^0.1.0",
     "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
+    "classnames": "^2.3.2",
     "easy-speech": "^2.1.1",
     "formik": "^2.4.5",
     "fs": "^0.0.1-security",
