--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^7.0.2",
     "@octokit/rest": "19.0.6",
     "@octokit/types": "^11.1.0",
     "@react-oauth/google": "^0.11.1",
@@ -37,7 +40,7 @@
     "immer": "^10.0.3",
     "install": "^0.13.0",
     "mespeak": "^2.0.2",
-    "npm": "^10.2.0",
+    "npm": "^10.2.3",
     "octokit-commit-multiple-files": "^4.3.0",
     "open": "^9.1.0",
     "os": "^0.1.2",
@@ -59,6 +62,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "sanitize-html": "^2.11.0",
+    "sass": "^1.69.5",
+    "scss": "^0.2.4",
     "sortablejs": "^1.15.0",
     "speech-synthesis-recorder": "^1.2.1",
     "stream": "^0.0.2",
