--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.4.0",
     "blob": "^0.1.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "easy-speech": "^2.1.1",
@@ -58,6 +59,7 @@
     "react-scripts": "^5.0.1",
     "react-sortablejs": "^6.1.4",
     "react-textarea-autosize": "^8.5.3",
+    "react-textfit": "^1.1.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
@@ -103,6 +105,7 @@
   "devDependencies": {
     "@types/randomstring": "^1.1.10",
     "@types/react-modal": "^3.16.1",
+    "@types/react-textfit": "^1.1.3",
     "@types/sanitize-html": "^2.9.1",
     "@types/sortablejs": "^1.15.4"
   }
