--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-sortablejs": "^6.1.4",
     "react-textarea-autosize": "^8.5.3",
     "react-textfit": "^1.1.1",
+    "react-use-audio-player": "^2.2.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
@@ -107,6 +108,7 @@
     "@types/react-modal": "^3.16.1",
     "@types/react-textfit": "^1.1.3",
     "@types/sanitize-html": "^2.9.1",
-    "@types/sortablejs": "^1.15.4"
+    "@types/sortablejs": "^1.15.4",
+    "typescript": "^5.6.2"
   }
 }
