added better sunthesise voices via google

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
-REACT_APP_GITHUB_CLIENT_ID="732135631895-4eim47el07jd62qf5kgetik85ttnbs59.apps.googleusercontent.com"
-REACT_APP_API_KEY = "AIzaSyC7PiVmIoolPjS7Vkoz4tCK5SNEfa6QPgw"
+REACT_APP_GITHUB_CLIENT_ID="800811858295-a9jb8i3inph4mp5p5qlfhfgk3t7i6n83.apps.googleusercontent.com"
+REACT_APP_API_KEY = "AIzaSyD55DpdfaXAuBARok0w3Mnetv7j3q69BVs"
 REACT_APP_DATA_ENGLISH_FOLDER_ID = '1NsSdLNS9v4jL1xgFzTgmR3eGOdoHef_o'
 REACT_APP_DATA_GERMAN_FOLDER_ID = '1lkdK-4wLRItXo-3E-znLnC6BlvyadEmp'
 REACT_APP_DATA_SPANISH_FOLDER_ID = '1OeFMaTpkbszwG2bO6InjSRFGWX0FxdsZ'
 REACT_APP_SECRET_FILE_ID = '1vU74YCJgGmpsuQDOLfEbMzICIHeJ29Sx'
-REACT_APP_SCOPES = 'https://www.googleapis.com/auth/drive'
+REACT_APP_SCOPES = 'https://www.googleapis.com/auth/cloud-platform https://www.googleapis.com/auth/drive'
 REACT_APP_DISCOVERY_DOCS = 'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'
